--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
       "error",
       "ignorePackages",
       {
+        "js": "never",
+        "jsx": "never",
         "ts": "never",
         "tsx": "never"
       }
