--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react",
     "target": "es5",
     "lib": [
       "dom",
@@ -18,9 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "./src/ts/**/*"
+    "./src/"
   ],
   "exclude": [
     "node_modules"
