--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
       }
     ],
     "no-use-before-define": "off",
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-use-before-define": ["error"]
   },
   "settings": {
